# AlgorithmAdvanced

./: CMakeLists.txt  README.md
Algorithms/: LCA.cpp  MOsAlgorithm.cpp  Mergesort.cpp  Quicksort.cpp  RandomQuicksort.cpp  SegmentTree.cpp
Basic/ad-hoc/: BallsGame.cpp  BeautifulSetsOfPoints.cpp  Bingo.cpp  BooksCatalog.cpp  DifferentDigits.cpp  DivisionOfNlogonia.cpp  HitTheTarget.cpp  InBraille.cpp  KefaAndCompany.cpp  KiloMan.cpp  LaserSculpture.cpp  LinelandMail.cpp  Resort.cpp  Stripe.cpp  TanyaAndPostcard.cpp  WhereAreMyKeys.cpp
Basic/bonus/: ContractRevision.cpp  Feynman.cpp  HoursAndMinutes.cpp  IdentifyingTea.cpp  KickbackSum.cpp  MusicalLoop.cpp  TheClubBallroom.cpp  Tri-du.cpp
Basic/graphs/: ConnectedComponents.cpp  CopsAndRobbers.cpp  DarksRoads.cpp  DuduServiceMaker.cpp  EvenObsession.cpp  IsItATree.cpp  SmartGame.cpp  TwoButtons.cpp  ValeraAndElections.cpp
Basic/greedy-and-backtracking/: FindingTeamMember.cpp
Basic/math/: AllYouNeedIsLove.cpp  DuffInLove.cpp  MarianneAndTheTwinCousins.cpp  SimpleBaseConversion.cpp  SoldierAndNumberGame.cpp  TrinomialTriangleTheRevenge.cpp  VanyaAndBooks.cpp  VasyaAndPetyasGame.cpp
Basic/problem-solving/: AnyaAndSmartphone.cpp  BiggestNumberGame.cpp  DiamondsAndSand.cpp  HammingDistanceSum.cpp  NewYearAndOldProperty.cpp  PuttingPlatesOnTheTuk-tuks.cpp  TShirts.cpp  Team.cpp
Basic/review/: AmrAndPins.cpp  BerSUBall.cpp  CaseOfMatryoshkas.cpp  Fence.cpp  PashaAndTea.cpp  Permutation.cpp  RenzoPalindromicDecoration.cpp  SimpleGame.cpp
Basic/structures/: BrokenKeyboard.cpp  HallOfMurderers.cpp  ICanGuessTheDataStructure.cpp  MishaAndChangingHandles.cpp  ParenthesisBalanceI.cpp  Rails.cpp  Subsequences.cpp  WhereIsTheMarble.cpp
Intermediary/bit-lazy-propagation/: InversionCount.cpp  MultiplesOfThree.cpp  TheDayOfTheCompetitors.cpp
Intermediary/bit-lazypropagation/: InversionCount.cpp  MultiplesOfThree.cpp
Intermediary/fast-flow/: DungeonOfDeath.cpp  ElementaryMath.cpp  FastMaximumFlow.cpp  MyTshirtSuitsMe.cpp
Intermediary/hashing-trie/: AStoryWithStrings.cpp  CellphoneTyping.cpp  GoodSubstrings.cpp  PhoneList.cpp  QueriesForNumberOfPalindromes.cpp
Intermediary/kmp-z-algorithm/: ANeedleInTheHaystack.cpp  ExtendToPalindrome.cpp  FindStringRoots.cpp  Password.cpp  QueryProblem.cpp
Intermediary/lowest-common-ancestor/: AntsColony.cpp  DuffInTheArmy.cpp  LowestCommonAncestor.cpp  Trucks.cpp
Intermediary/max-flow/: AngryProgrammer.cpp  InternetBandwidth.cpp  PowerTransmission.cpp  TotalFlow.cpp
Intermediary/number-theory/: CrucialEquation.cpp  EuclidProblem.cpp  Marbles.cpp  MediumFactorization.cpp  PlayWithFloorAndCeil.cpp  QuidEstVeritasEstVirQuiAdest.cpp  SequenceSumPossibilities.cpp  VisibleLatticePoints.cpp
Intermediary/segment-tree/: CanYouAnswerTheseQueries.cpp  Census.cpp  DominoPrinciple.cpp  IntervalProduct.cpp  MaximumSum.cpp  ToPoland.cpp
Intermediary/sqrt-decomposition/: Collector.cpp  DQuery.cpp  HorribleQueries.cpp  LittleElephantAndArray.cpp  PowerfulArray.cpp  RaceAgainstTime.cpp
